[package]
name = "dslab-scheduling"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"


[dependencies]

dslab-core = { git = "https://github.com/nogokama/dslab.git", branch = "async_scheduling", features = ["async_mode"] }
dslab-compute = {git = "https://github.com/nogokama/dslab.git", branch="async_scheduling" }
dslab-storage = {git = "https://github.com/nogokama/dslab.git", branch = "async_scheduling"}
dslab-network = {git = "https://github.com/nogokama/dslab.git", branch = "async_scheduling" }

serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"]}
serde_yaml = "0.8"
sugars = "3.0.0"
log = "0.4.14"
env_logger = "0.9.0"
lazy_static = "1.4"
futures = "0.3"
async-trait = "0.1.78"
maplit = "1.0"
csv = "1.3"
prost = "0.12"
prost-build = "0.12"