[package]
name = "scheduling-fairness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dslab-scheduling = { path = "../../simulator" }
dslab-core = { git = "https://github.com/nogokama/dslab.git", branch = "async_scheduling", features = ["async_mode"] }
dslab-compute = {git = "https://github.com/nogokama/dslab.git", branch="async_scheduling" }
dslab-storage = {git = "https://github.com/nogokama/dslab.git", branch = "async_scheduling" }
dslab-network = {git = "https://github.com/nogokama/dslab.git", branch = "async_scheduling" }

clap = { version = "3.1.12", features = ["cargo", "derive"] }
log = "0.4.14"
env_logger = "0.9.0"
sugars = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
serde_yaml = "0.8"
